--- a/.github/workflows/win-qt5.yml
+++ b/.github/workflows/win-qt5.yml
@@ -1,8 +1,4 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
+# 修复后的完整可用代码
 name: Windows Qt5.14.2
 
 on:
@@ -18,17 +14,6 @@ on:
     paths:
       - 'random/**'
       - '.github/workflows/win-qt5.yml'
-# env:
-#   # Path to the solution file relative to the root of the project.
-#   SOLUTION_FILE_PATH: .
-
-#   # Configuration type to build.
-#   # You can convert this to a build matrix if you need coverage of multiple configuration types.
-#   # https://docs.github.com/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-#   BUILD_CONFIGURATION: Release
-
-# permissions:
-#   contents: read
 
 jobs:
   build:
@@ -52,14 +37,14 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: recursive
-             
+              
       - name: 安装Qt Install Qt
         uses: jurplel/install-qt-action@v3
         with:
           version: ${{ matrix.qt_ver }}
           arch: ${{ matrix.qt_arch }}
-          cache: ${{steps.cache-qt.outputs.cache-hit}}
-          
+          # 删除了错误的 cache 配置行
+           
       - name: MSVC编译 msvc-build
         id: build
         shell: cmd
@@ -71,7 +56,7 @@ jobs:
           echo winSdkVer=%WindowsSdkVersion% >> %GITHUB_ENV%
           echo vcToolsInstallDir=%VCToolsInstallDir% >> %GITHUB_ENV%
           echo vcToolsRedistDir=%VCToolsRedistDir% >> %GITHUB_ENV%
-          
+           
       - name: 打包 package
         id: package      
         env:
@@ -80,18 +65,16 @@ jobs:
         shell: pwsh
         run: |
           & scripts\windows-publish.ps1 ${env:archiveName}
-          # 记录packageName给后续step
            $name = ${env:archiveName}
-           echo "::set-output name=packageName::$name"     
-           
+           echo "::set-output name=packageName::$name"      
+            
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ steps.package.outputs.packageName }}
           path: dist
-          
+           
       - name: 上传发布 uploadRelease
         if: startsWith(github.ref, 'refs/tags/')
-        # uses: softprops/action-gh-release@v1
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
@@ -99,18 +82,3 @@ jobs:
           asset_name: ${{ steps.package.outputs.packageName }}.zip
           tag: ${{ github.ref }}
           overwrite: true
-
-      # - name: Create Release
-      #   id: create_release
-      #   uses: actions/create-release@v1
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-      #   with:
-      #     tag_name: ${{ github.ref }}
-      #     release_name: Release ${{ github.ref }}
-      #     body: |
-      #       Changes in this Release
-      #       - First Change
-      #       - Second Change
-      #     draft: false
-      #     prerelease: false
