--- a/.github/workflows/win-qt5.yml
+++ b/.github/workflows/win-qt5.yml
@@ -2,13 +2,13 @@ name: Windows Qt5.14.2
 
 on:
   push:
-    branches: 
+    branches:
       - main
     paths:
       - 'random/**'
       - '.github/workflows/win-qt5.yml'
   pull_request:
-    branches: 
+    branches:
       - main
     paths:
       - 'random/**'
@@ -17,15 +17,16 @@ on:
 jobs:
   build:
     name: 编译环境 Build
+    # 使用 windows-2019 以保持对旧版 MSVC 的最佳兼容性
     runs-on: windows-2019
     strategy:
       matrix:
         include:
-          - qt_ver: 5.14.2        
+          - qt_ver: 5.14.2
             qt_arch: win32_msvc2017
             msvc_arch: x86
             qt_arch_install: msvc2017
-          - qt_ver: 5.14.2        
+          - qt_ver: 5.14.2
             qt_arch: win64_msvc2017_64
             msvc_arch: x64
             qt_arch_install: msvc2017_64
@@ -33,45 +34,49 @@ jobs:
       fileName: dataengines
     steps:
       - name: 查看存储库 Check out repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           submodules: recursive
-              
+
       - name: 安装Qt Install Qt
         uses: jurplel/install-qt-action@v3
         with:
           version: ${{ matrix.qt_ver }}
           arch: ${{ matrix.qt_arch }}
-          # 删除了错误的 cache 配置行
-           
+          
+      # ✅ 修复点：使用插件自动配置 MSVC 环境，而不是手写硬编码路径
+      - name: 配置 MSVC 环境
+        uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: ${{ matrix.msvc_arch }}
+
       - name: MSVC编译 msvc-build
         id: build
         shell: cmd
         run: |
-          call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" ${{ matrix.msvc_arch }}
           qmake -makefile
           nmake
           echo winSdkDir=%WindowsSdkDir% >> %GITHUB_ENV%
           echo winSdkVer=%WindowsSdkVersion% >> %GITHUB_ENV%
           echo vcToolsInstallDir=%VCToolsInstallDir% >> %GITHUB_ENV%
           echo vcToolsRedistDir=%VCToolsRedistDir% >> %GITHUB_ENV%
-           
+
       - name: 打包 package
-        id: package      
+        id: package
         env:
           archiveName: ${{ env.fileName }}-${{ matrix.qt_arch }}-${{ matrix.qt_ver }}
-          msvcArch: ${{ matrix.msvc_arch }}          
+          msvcArch: ${{ matrix.msvc_arch }}
         shell: pwsh
         run: |
           & scripts\windows-publish.ps1 ${env:archiveName}
-           $name = ${env:archiveName}
-           echo "::set-output name=packageName::$name"      
-            
+          $name = ${env:archiveName}
+          echo "packageName=$name" >> $env:GITHUB_OUTPUT
+
       - uses: actions/upload-artifact@v4
         with:
           name: ${{ steps.package.outputs.packageName }}
           path: dist
-           
+
       - name: 上传发布 uploadRelease
         if: startsWith(github.ref, 'refs/tags/')
         uses: svenstaro/upload-release-action@v2
